--- a/server/package.json
+++ b/server/package.json
@@ -27,15 +27,18 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.3",
-    "@nestjs/swagger": "^7.3.0",
+    "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "^5.11.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "http-status-codes": "^2.2.0",
     "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -46,11 +49,14 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.3.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
+    "@types/passport-google-oauth2": "^0.1.8",
     "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
