--- a/server/.env.example
+++ b/server/.env.example
@@ -18,3 +18,10 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=db
 
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_CONTAINER_PORT}/${POSTGRES_DB}?schema=public
+
+# google auth
+CLIENT_ID=1074340906138-cvsqpkv4tvahver7489u140uhbb7d7a5.apps.googleusercontent.com
+CLIENT_SECRET=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
+REDIRECT_URL=http://localhost:4000/auth/google/callback
+SCOPE=profile,email
+REDIRECT_CLIENT_URL=http://localhost:4200
