--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "@ngrx/eslint-plugin": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@ngrx/store-devtools": "^16.3.0",
+    "chart.js": "^4.3.0",
+    "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
