chore: change jest config

--- a/client/tsconfig.spec.json
+++ b/client/tsconfig.spec.json
@@ -5,9 +5,9 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jest",
-      "node"
     ]
   },
+  "esModuleInterop": true,
   "emitDecoratorMetadata": true,
   "include": [
     "src/**/*.spec.ts",
