--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
+    "test:verbose": "jest --verbose",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "ng lint"
@@ -53,6 +54,7 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.0.3",
+    "lodash": "^4.17.21",
     "typescript": "~5.1.3"
   }
 }
