chore: remove OAuth client

--- a/server/.env.test
+++ b/server/.env.test
@@ -1,24 +1,24 @@
 # app
-PORT=4000
-CONTAINER_PORT=4000
-CLIENT_URL=http://localhost:4200
+PORT=4001
+CONTAINER_PORT=4001
+CLIENT_URL=http://localhost:4200/test
 
 # auth
 CRYPT_SALT=10
-JWT_SECRET_KEY=secret-1
-JWT_SECRET_REFRESH_KEY=secret-2
+JWT_SECRET_KEY=secret-test1
+JWT_SECRET_REFRESH_KEY=secret-test2
 TOKEN_EXPIRE_TIME=15m
 TOKEN_REFRESH_EXPIRE_TIME=1h
 
 # postgres
-DB_HOST_PORT=5432
+DB_HOST_PORT=5433
 DB_CONTAINER_PORT=5432
-DB_HOST=postgres_db
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_DB=db
+DB_HOST=localhost
+POSTGRES_USER=testUser
+POSTGRES_PASSWORD=testPassword
+POSTGRES_DB=testDb
 
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_CONTAINER_PORT}/${POSTGRES_DB}?schema=public
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_HOST_PORT}/${POSTGRES_DB}?schema=public
 
 # google OAuth 2.0 Client
 # https://console.cloud.google.com/apis/credentials
